tests/snapshots/cli__tests__fail-none-implicitly-in-search-mode-sorted.snap
---
source: tests/cli.rs
expression: "CommandSnap {\n    args,\n    stdin: None,\n    stdout: stdout.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec(),\n    exit_code,\n}"
info:
  stderr:
    - "Error: No input was in scope"
---
args:
  - "--sorted"
  - "--python"
  - strings
  - unfindable-string-dheuihiuhiulerfiuehrilufhiusdho438ryh9vuoih
stdin: ~
stdout: []
exit_code: 1
