tests/snapshots/cli__tests__fail-none-implicitly-in-search-mode-stdin.snap
---
source: tests/cli.rs
expression: "CommandSnap {\n    args,\n    stdin: None,\n    stdout: stdout.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec(),\n    exit_code,\n}"
info:
  stderr:
    - "Error: Error applying: No input was in scope"
---
args:
  - "--python"
  - strings
  - z
stdin: ~
stdout: []
exit_code: 1
