tests/snapshots/cli__tests__failing-on-anything-found-no-trigger.snap
---
source: tests/cli.rs
expression: "CommandSnap {\n    args,\n    stdin: stdin.split_inclusive('\\n').map(|s| s.to_owned()).collect_vec(),\n    stdout: stdout.split_inclusive('\\n').map(|s| s.to_owned()).collect_vec(),\n    exit_code,\n}"
info:
  stderr: ""
---
args:
  - "--fail-any"
  - A
stdin:
  - XYZ
stdout:
  - XYZ
exit_code: 0
