tests/snapshots/cli__tests__files-inplace-python-dry-run-windows.snap
---
source: tests/cli.rs
expression: "CommandSnap\n{\n    args, stdin: None, stdout:\n    stdout.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec(),\n    exit_code,\n}"
info:
  stderr: []
---
args:
  - "-vvvv"
  - "--sorted"
  - "--glob"
  - "**/*.py"
  - foo
  - "--"
  - baz
stdin: ~
stdout:
  - "1.py:1:36-39:# This string is found and touched: foo\n"
  - "1.py:1:36-39:# This string is found and touched: baz\n"
  - "1.py:4:4-7:def foo(bar: int) -> int:\n"
  - "1.py:4:4-7:def baz(bar: int) -> int:\n"
  - "subdir\\2.py:1:4-7:def foo(bar: int) -> int:\n"
  - "subdir\\2.py:1:4-7:def baz(bar: int) -> int:\n"
  - "subdir\\subdir\\3.py:1:4-7:def foo(bar: int) -> int:\n"
  - "subdir\\subdir\\3.py:1:4-7:def baz(bar: int) -> int:\n"
exit_code: 0
