tests/snapshots/cli__tests__german-002_symbols.snap
---
source: core/tests/cli.rs
description: "Hallo Welt, Mauerduebel!\n"
expression: "&output"
---
Hallo Welt, Mauerduebel!

